[gd_scene load_steps=29 format=2]

[ext_resource path="res://UI/bgg.png" type="Texture" id=1]
[ext_resource path="res://dkb.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/back.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=4]
[ext_resource path="res://bfg.gd" type="Script" id=5]
[ext_resource path="res://Scripts/optionbutton.gd" type="Script" id=6]
[ext_resource path="res://UI/buttonsmallpressed.png" type="Texture" id=7]
[ext_resource path="res://UI/buttonsmall.png" type="Texture" id=8]
[ext_resource path="res://Scripts/custom.gd" type="Script" id=9]
[ext_resource path="res://fonts/typeface-mario-world-pixel-font/TypefaceMarioWorldPixelFilledRegular-rgVMx.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://small.tres" type="Theme" id=11]
[ext_resource path="res://Scripts/setting4.gd" type="Script" id=12]
[ext_resource path="res://UI/eyedroper.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("bfg:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -7155, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("bfg:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -5718, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "cool"
length = 1.12342e+07
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("bfg:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -7155, -0.25, 0, 0.25, 0, -2.1453e+07, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.12342e+07 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("bfg:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -5718, -0.25, 0, 0.25, 0, -1.6995e+07, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.12342e+07 )
}

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 733, 320 )

[node name="settings" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 4 )

[node name="bfg" type="TextureRect" parent="."]
modulate = Color( 0.956863, 0.282353, 0.866667, 1 )
margin_left = -7155.0
margin_top = -5718.0
margin_right = 4.51508e+08
margin_bottom = 1.51515e+09
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
stretch_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="bfg"]
root_node = NodePath("../..")
autoplay = "cool"
playback_speed = 13.05
anims/RESET = SubResource( 1 )
anims/cool = SubResource( 2 )

[node name="back" type="Button" parent="."]
margin_left = 1.0
margin_top = 448.0
margin_right = 181.0
margin_bottom = 641.0
theme = ExtResource( 2 )
text = "back"
script = ExtResource( 3 )

[node name="setting1" type="CheckButton" parent="."]
margin_left = 267.0
margin_top = 3.0
margin_right = 724.0
margin_bottom = 135.0
theme = ExtResource( 2 )
pressed = true
text = "Scrolling bg"
align = 1

[node name="setting2" type="OptionButton" parent="."]
margin_left = 279.0
margin_top = 136.0
margin_right = 714.0
margin_bottom = 262.0
theme = ExtResource( 11 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.839216, 0.188235, 0.188235, 1 )
custom_colors/font_color = Color( 0.815686, 0.145098, 0.145098, 1 )
custom_colors/font_color_hover = Color( 0.866667, 0.333333, 0.333333, 1 )
custom_colors/font_color_pressed = Color( 0.431373, 0.121569, 0.121569, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
align = 1
icon_align = 1
script = ExtResource( 6 )

[node name="custom" type="Button" parent="setting2"]
margin_left = 434.0
margin_top = 2.0
margin_right = 577.0
margin_bottom = 135.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 13 )
icon_align = 1
expand_icon = true
script = ExtResource( 9 )

[node name="ColorPicker" type="ColorPicker" parent="setting2/custom"]
visible = false
margin_left = -342.0
margin_top = -96.0
margin_right = 137.0
margin_bottom = 497.0
rect_scale = Vector2( 0.6, 0.6 )
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="Sprite" type="Sprite" parent="setting2/custom/ColorPicker"]
visible = false
show_behind_parent = true
position = Vector2( 236.667, 353.333 )
scale = Vector2( 2.36471, 3.20625 )
texture = ExtResource( 8 )

[node name="setting3" type="CheckButton" parent="."]
margin_left = 241.0
margin_top = 735.0
margin_right = 749.0
margin_bottom = 915.0
theme = ExtResource( 2 )
text = "auto fullscreen"
align = 1

[node name="setting4" type="Button" parent="."]
margin_left = 261.0
margin_top = 278.0
margin_right = 732.0
margin_bottom = 403.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
text = "Change file path"
script = ExtResource( 12 )

[node name="Node2D" type="Node2D" parent="setting4"]

[node name="FileWindoe" type="FileDialog" parent="setting4/Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -421.0
margin_top = -465.0
margin_right = 601.0
margin_bottom = 132.0
theme = ExtResource( 11 )
window_title = "Where to save levels? (can be changed later)"
mode_overrides_title = false
mode = 2
access = 2
filters = PoolStringArray( "folder" )

[node name="setting5" type="Button" parent="."]
margin_left = 216.0
margin_top = 425.0
margin_right = 786.0
margin_bottom = 559.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
text = "Auto Save Interval"

[node name="TextEdit" type="TextEdit" parent="setting5"]
use_parent_material = true
anchor_right = 0.685
margin_left = 571.0
margin_top = 6.0
margin_right = 320.55
margin_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Time is in Seconds"
theme = ExtResource( 11 )
text = "100"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="back" to="back" method="_on_back_pressed"]
[connection signal="pressed" from="setting1" to="." method="_on_setting1_pressed"]
[connection signal="item_selected" from="setting2" to="setting2" method="_on_setting2_item_selected"]
[connection signal="pressed" from="setting2/custom" to="setting2/custom" method="_on_custom_pressed"]
[connection signal="pressed" from="setting4" to="setting4" method="_on_setting4_pressed"]
[connection signal="dir_selected" from="setting4/Node2D/FileWindoe" to="." method="_on_FileWindoe_dir_selected"]
[connection signal="text_changed" from="setting5/TextEdit" to="." method="_on_TextEdit_text_changed"]
